Added font files

--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -1,10 +1,12 @@
 ---
+import BaseLayout from '@layouts/BaseLayout.astro';
 import { getLangFromUrl, useTranslations } from '@i18n';
 
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 ---
-
-<div>
-  {t('welcome')}
-</div>
+<BaseLayout title={t('welcome')}>
+  <div>
+    {t('welcome')}
+  </div>
+</BaseLayout>
