--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,7 @@
 ---
+// TODO detect language from request header
+
+// TODO we can avoid the additional redirect by checking login status right here!
 return Astro.redirect('/en/');
 ---
 
