--- a/src/pages/[lang]/sign-in.astro
+++ b/src/pages/[lang]/sign-in.astro
@@ -1,11 +1,12 @@
 ---
 import BaseLayout from '@layouts/BaseLayout.astro';
 import { Login } from '@apps/auth-login';
+import { getTranslations } from '@i18n';
 ---
 <BaseLayout title="ViCo | Login">
   <div class="container">
     <div class="column">
-      <Login client:load />
+      <Login i18n={getTranslations(Astro.request, 'auth-login')} client:load />
     </div>
   </div>
 </BaseLayout>
