--- a/src/themes/default/index.css
+++ b/src/themes/default/index.css
@@ -1,5 +1,7 @@
 @import './animation/index.css';
+@import './breadcrumbs/index.css';
 @import './button/index.css';
+@import './dropdown/index.css';
 @import './input/index.css';
 @import './mixins/index.css';
 
