--- a/src/themes/default/button/unstyled.css
+++ b/src/themes/default/button/unstyled.css
@@ -14,3 +14,17 @@ button.unstyled {
 button.unstyled:not(:disabled):hover {
   box-shadow: inset 0 0 0 150px rgba(0, 0, 0, 0.08);
 }
+
+button.unstyled.icon-only {
+  border: 2px solid transparent;
+  border-radius: 50%;
+  width: 34px;
+  height: 34px;
+  outline: none;
+  padding: 2px;
+}
+
+button.unstyled.icon-only svg {
+  margin: 0;
+  padding: 0;
+}
