--- a/src/themes/default/index.css
+++ b/src/themes/default/index.css
@@ -4,6 +4,7 @@
 @import './dropdown/index.css';
 @import './input/index.css';
 @import './mixins/index.css';
+@import './toast/index.css';
 
 @font-face {
   font-family: Inter;
