--- a/src/themes/default/toast/index.css
+++ b/src/themes/default/toast/index.css
@@ -25,6 +25,7 @@
   position: relative;
 }
 
+
 .toast[data-state='open'] {
   animation: slideIn 150ms cubic-bezier(0.16, 1, 0.3, 1);
 }
@@ -73,9 +74,11 @@
 @keyframes hide {
   from {
     opacity: 1;
+    transform: translateX(0);
   }
   to {
     opacity: 0;
+    transform: translateX(calc(100% + var(--viewport-padding)));
   }
 }
 
