--- a/src/layouts/project/ProjectLayout.astro
+++ b/src/layouts/project/ProjectLayout.astro
@@ -8,11 +8,14 @@ const { active, project } = Astro.props;
 const lang = getLangFromUrl(Astro.url);
 
 const i18n = getTranslations(Astro.request, 'project-sidebar');
+
+const cookie = Astro.cookies.get('x-project-sidebar-collapsed');
 ---
 <BaseLayout title={project.name}>	
   <ProjectSidebar 
     client:load 
     active={active} 
+    collapsed={cookie.value === 'true'}
     lang={lang} 
     i18n={i18n}
     project={project} />
