--- a/src/pages/[lang]/projects/index.astro
+++ b/src/pages/[lang]/projects/index.astro
@@ -2,7 +2,6 @@
 import DashboardLayout from '@layouts/dashboard/DashboardLayout.astro';
 import { createSupabaseServerClient } from '@backend/supabaseServerClient';
 import { getTranslations } from '@i18n';
-import { getUser } from '@backend/auth';
 import { listMyProjects } from '@backend/projects';
 import { ProjectsHome } from '@apps/dashboard-projects';
 
@@ -11,11 +10,9 @@ const supabase = await createSupabaseServerClient(Astro.request, Astro.cookies);
 if (!supabase)
   return Astro.redirect('/sign-in');
 
-const user = await getUser(supabase);
-
 const response = await listMyProjects(supabase);
 ---
-<DashboardLayout title="My Projects" active="projects" user={user}>
+<DashboardLayout>
   {response.error ? (
     <div>Something went wrong</div>
   ) : (
