--- a/src/pages/[lang]/projects/[slug]/index.astro
+++ b/src/pages/[lang]/projects/[slug]/index.astro
@@ -1,8 +1,9 @@
 ---
 import ProjectLayout from '@layouts/project/ProjectLayout.astro';
 import { createSupabaseServerClient } from '@backend/supabaseServerClient';
-import { getLangFromUrl } from '@i18n';
+import { getUserProfile } from '@backend/auth';
 import { getProject } from '@backend/projects';
+import { getLangFromUrl } from '@i18n';
 
 const lang = getLangFromUrl(Astro.url);
 
@@ -10,11 +11,13 @@ const supabase = await createSupabaseServerClient(Astro.request, Astro.cookies);
 if (!supabase)
   return Astro.redirect(`/${lang}/sign-in`);
 
+const user = await getUserProfile(supabase);
+
 const projectId = Astro.params.slug;
 
 const response = await getProject(supabase, projectId as string);
 ---
-<ProjectLayout active="home" project={response.data}>
+<ProjectLayout active="home" user={user} project={response.data}>
   {response.error ? (
     <div>Something went wrong</div>
   ) : (
