Dummy 'Project' home page

--- a/src/pages/[lang]/projects/[slug]/addons.astro
+++ b/src/pages/[lang]/projects/[slug]/addons.astro
@@ -21,6 +21,6 @@ const response = await getProject(supabase, projectId as string);
   {response.error ? (
     <div>Something went wrong</div>
   ) : (
-    <div>Hello World</div>
+    <div>Add Ons</div>
   )}
 </ProjectLayout>
