--- a/src/pages/[lang]/projects/[slug]/index.astro
+++ b/src/pages/[lang]/projects/[slug]/index.astro
@@ -3,7 +3,8 @@ import ProjectLayout from '@layouts/project/ProjectLayout.astro';
 import { createSupabaseServerClient } from '@backend/supabaseServerClient';
 import { getUserProfile } from '@backend/auth';
 import { getProject } from '@backend/projects';
-import { getLangFromUrl } from '@i18n';
+import { getLangFromUrl, getTranslations } from '@i18n';
+import { ProjectHome } from '@apps/project-home';
 
 const lang = getLangFromUrl(Astro.url);
 
@@ -15,12 +16,14 @@ const user = await getUserProfile(supabase);
 
 const projectId = Astro.params.slug;
 
+const i18n = getTranslations(Astro.request, 'project-home');
+
 const response = await getProject(supabase, projectId as string);
 ---
 <ProjectLayout active="home" user={user} project={response.data}>
   {response.error ? (
     <div>Something went wrong</div>
   ) : (
-    <div>Hello World</div>
+    <ProjectHome project={response.data} i18n={i18n} />
   )}
 </ProjectLayout>
