--- a/src/layouts/project/ProjectLayout.astro
+++ b/src/layouts/project/ProjectLayout.astro
@@ -36,7 +36,7 @@ const cookie = Astro.cookies.get('x-project-sidebar-collapsed');
       <nav class="breadcrumbs">
         <ol>
           <li>
-            <a href=`/${lang}/projects`>ViCo</a>
+            <a href=`/${lang}/projects`>INeedAName</a>
           </li>
 
           <li>
