--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -4,7 +4,7 @@ import BaseLayout from '@layouts/BaseLayout.astro';
 
 const { t } = getTranslations(Astro.request, 'error');
 ---
-<BaseLayout title="ViCo | Login">
+<BaseLayout title="INeedAName | Login">
   <div class="container">
     <div class="column">
       <h1>404 Not Found</h1>
