Proper (re-)integration of annotorious-react

--- a/src/apps/annotation-image/ImageAnnotationDesktop.css
+++ b/src/apps/annotation-image/ImageAnnotationDesktop.css
@@ -1,5 +1,11 @@
+@import '@annotorious/react/dist/annotorious-react.css';
+
 .ia-desktop, .ia-osd-container {
   height: 100%;
   position: relative;
   width: 100%;
+}
+
+.openseadragon-canvas {
+  outline: none;
 }
