--- a/src/themes/default/index.css
+++ b/src/themes/default/index.css
@@ -1,4 +1,5 @@
 @import './animation/index.css';
+@import './annotation/index.css';
 @import './breadcrumbs/index.css';
 @import './button/index.css';
 @import './dropdown/index.css';
