--- a/src/pages/[lang]/projects/[slug]/index.astro
+++ b/src/pages/[lang]/projects/[slug]/index.astro
@@ -4,7 +4,7 @@ import { createSupabaseServerClient } from '@backend/supabaseServerClient';
 import { getUserProfile } from '@backend/auth';
 import { getLangFromUrl, getTranslations } from '@i18n';
 import { ProjectHome } from '@apps/project-home';
-import { getProjectWithContexts } from '@backend/helpers';
+import { getProjectWithContexts, listDocumentsInContext } from '@backend/helpers';
 
 const lang = getLangFromUrl(Astro.url);
 
@@ -19,11 +19,34 @@ const projectId = Astro.params.slug;
 const i18n = getTranslations(Astro.request, 'project-home');
 
 const response = await getProjectWithContexts(supabase, projectId as string);
+
+if (response.error) { 
+  const error = await fetch(`${Astro.url}/500`);
+  return new Response(error.body, { headers: error.headers, status: 500 }); 
+}
+
+if (!response.data) {
+  const error = await fetch(`${Astro.url}/404`);
+  return new Response(error.body, { headers: error.headers, status: 404 }); 
+}
+
+const { contexts, ...project} = response.data || { contexts: undefined };
+
+// Temporary hack
+const defaultContext = contexts[0];
+
+const { data, error } = await listDocumentsInContext(supabase, defaultContext.id);
+
+if (error) { 
+  const error = await fetch(`${Astro.url}/500`);
+  return new Response(error.body, { headers: error.headers, status: 500 }); 
+}
 ---
 <ProjectLayout active="home" user={user} project={response.data}>
-  {response.error ? (
-    <div>Something went wrong</div>
-  ) : (
-    <ProjectHome project={response.data} defaultContext={response.data.contexts[0]} i18n={i18n} client:load />
-  )}
+  <ProjectHome 
+    client:load
+    i18n={i18n} 
+    project={project} 
+    defaultContext={contexts[0]} 
+    documents={data}/>
 </ProjectLayout>
