--- a/src/apps/project-home/ProjectHome.css
+++ b/src/apps/project-home/ProjectHome.css
@@ -2,6 +2,6 @@
   display: grid;
   gap: 1rem;
   grid-auto-rows: 1fr;  
-  grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+  grid-template-columns: repeat(auto-fill, 180px);
   padding: 30px 0 40px 0;
 }
