--- a/src/components/DocumentCard/DocumentCard.css
+++ b/src/components/DocumentCard/DocumentCard.css
@@ -3,7 +3,6 @@
   border-radius: var(--border-radius);
   box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
   cursor: pointer;
-  padding: 10px;
   position: relative;
   transition: all .25s ease-in-out;
 }
@@ -14,9 +13,30 @@
     0 2px 8px -2px rgba(0, 0, 0, 0.28);
 }
 
-.document-card h1 {
+.document-card-body {
+  align-items: center;
+  color: var(--gray-300);
+  display: flex;
+  height: 160px;
+  justify-content: center;
+}
+
+.document-card-footer {
+  border-top: 1px solid var(--gray-200);
+  display: flex;
+  justify-content: flex-end;
+  padding: 8px;
+}
+
+.document-card-container h1 {
+  font-family: Inter;
   font-size: 1em;
   font-weight: 500;
   margin: 0;
-  padding: 0;  
+  padding: 0.6em 0;  
+  text-align: center;
+}
+
+.document-card-container h1 a {
+  color: var(--font-dark);
 }
