--- a/src/themes/default/index.css
+++ b/src/themes/default/index.css
@@ -99,7 +99,7 @@
   --gray-500: #6f7780;
   --gray-300: #c2c8d0;
   --gray-200: #dfe2e7;
-  --gray-100: #f1f3f6;
+  --gray-100: #e9ecf1;
   --gray-50: #f6f7f9;
 
   --red-500: #d00e17;
