--- a/src/components/DocumentCard/DocumentCard.css
+++ b/src/components/DocumentCard/DocumentCard.css
@@ -34,7 +34,7 @@
 
 .document-card-container h1 {
   font-family: Inter;
-  font-size: 1em;
+  font-size: var(--font-small);
   margin: 0;
   padding: 0.6em 0;  
   text-align: center;
