--- a/src/themes/default/annotation/index.css
+++ b/src/themes/default/annotation/index.css
@@ -7,6 +7,17 @@
   width: 100%;
 }
 
+.anno-desktop-right {
+  display: flex;
+  flex-direction: row;
+  position: absolute;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  pointer-events: none;
+  z-index: 2;
+}
+
 .anno-desktop-bottom {
   bottom: 0;
   display: flex;
