--- a/src/components/PresenceStack/PresenceStack.css
+++ b/src/components/PresenceStack/PresenceStack.css
@@ -1,3 +1,27 @@
+.presence-stack {
+  filter: 
+    drop-shadow(0 0 1px rgba(0, 0, 0, 0.25))
+    drop-shadow(0 0 2px rgba(0, 0, 0, 0.12));
+}
+
 .presence-stack ul {
   list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.presence-stack li {
+  display: inline;
+}
+
+.presence-stack li + li {
+  margin-left: -8px;
+}
+
+.presence-stack .avatar {
+  border: 3px solid #fff;
+  letter-spacing: 0.05ch;
+  font-size: var(--font-tiny);
+  font-weight: 500;
+  pointer-events: all;
 }
