--- a/src/themes/default/avatar/index.css
+++ b/src/themes/default/avatar/index.css
@@ -10,10 +10,16 @@
 .avatar-fallback {
   align-items: center;
   border-radius: 50%;
+  border-style: solid;
+  border-width: 1px;
+  box-sizing: border-box;
   color: #fff;
   display: flex;
+  font-size: var(--font-tiny);
+  font-weight: 500;
   height: 100%;
   justify-content: center;
+  line-height: 120%;
   width: 100%;
 }
 
