--- a/src/themes/default/button/index.css
+++ b/src/themes/default/button/index.css
@@ -62,8 +62,9 @@ button svg:last-child {
 }
 
 button.sm {
-  font-size: var(--font-small);
-  padding: 4px 10px;
+  font-size: var(--font-tiny);
+  line-height: 120%;
+  padding: 8px 16px;
 }
 
 button.lg {
