--- a/src/themes/default/index.css
+++ b/src/themes/default/index.css
@@ -95,8 +95,8 @@
   --bright-blue: #07529a;
   --mud-gray: #808073;
   --orange: #e9b44a;
-
-  --gray-900: #2d333a;
+  
+  --gray-900: #202125;
   --gray-500: #6f7780;
   --gray-300: #c2c8d0;
   --gray-200: #dfe2e7;
