--- a/src/themes/default/index.css
+++ b/src/themes/default/index.css
@@ -89,6 +89,17 @@
   font-weight: 700;
 }
 
+@font-face {
+  font-family: Lora;
+  src: url('/fonts/lora/Lora.ttf');
+}
+
+@font-face {
+  font-family: Lora;
+  src: url('/fonts/lora/Lora-Italic.ttf');
+  font-style: italic;
+}
+
 :root {
   /** Colors **/
   --dark-blue: #07498a;
@@ -98,7 +109,8 @@
   
   --gray-900: #202125;
   --gray-500: #6f7780;
-  --gray-300: #c2c8d0;
+  --gray-400: #c2c8d0;
+  --gray-300: #dce0e4;
   --gray-200: #dfe2e7;
   --gray-100: #e9ecf1;
   --gray-50: #f6f7f9;
