--- a/src/themes/default/index.css
+++ b/src/themes/default/index.css
@@ -151,7 +151,7 @@
 html, body {
   background-color: var(--gray-100);
   color: var(--gray-900);
-  font-family: 'Inter', Arial, Helvetica, sans-serif;
+  font-family: Inter, Arial, Helvetica, sans-serif;
   font-size: 16px;
   line-height: 160%;
   margin: 0;
